// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preprocessSchema allows custom inverse relations (name) 1`] = `
Object {
  "models": Object {
    "person": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "people",
      "relations": Object {
        "createdPosts": Object {
          "fkName": "createdPostIds",
          "inverseName": "person",
          "isInverse": true,
          "isPlural": true,
          "model": "post",
          "type": "string",
          "validations": Object {},
        },
      },
      "singular": "person",
    },
    "post": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "posts",
      "relations": Object {
        "person": Object {
          "fkName": "personId",
          "inverseName": "createdPosts",
          "isInverse": false,
          "isPlural": false,
          "model": "person",
          "type": "string",
          "validations": Object {},
        },
      },
      "singular": "post",
    },
  },
}
`;

exports[`preprocessSchema allows custom inverse relations (singular) 1`] = `
Object {
  "models": Object {
    "address": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "addresses",
      "relations": Object {
        "person": Object {
          "fkName": "personId",
          "inverseName": "address",
          "isInverse": false,
          "isPlural": false,
          "model": "person",
          "type": "string",
          "validations": Object {},
        },
      },
      "singular": "address",
    },
    "person": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "people",
      "relations": Object {
        "address": Object {
          "fkName": "addressId",
          "inverseName": "person",
          "isInverse": true,
          "isPlural": false,
          "model": "address",
          "type": "string",
          "validations": Object {},
        },
      },
      "singular": "person",
    },
  },
}
`;

exports[`preprocessSchema allows disabling inverse relations 1`] = `
Object {
  "models": Object {
    "person": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "people",
      "relations": Object {},
      "singular": "person",
    },
    "post": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "posts",
      "relations": Object {
        "person": Object {
          "fkName": "personId",
          "inverseName": null,
          "isInverse": false,
          "isPlural": false,
          "model": "person",
          "type": "string",
          "validations": Object {},
        },
      },
      "singular": "post",
    },
  },
}
`;

exports[`preprocessSchema completes custom relations 1`] = `
Object {
  "models": Object {
    "person": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "people",
      "relations": Object {
        "posts": Object {
          "fkName": "postIds",
          "inverseName": "author",
          "isInverse": true,
          "isPlural": true,
          "model": "post",
          "type": "string",
          "validations": Object {},
        },
      },
      "singular": "person",
    },
    "post": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "posts",
      "relations": Object {
        "author": Object {
          "fkName": "authorId",
          "inverseName": "posts",
          "isInverse": false,
          "isPlural": false,
          "model": "person",
          "type": "string",
          "validations": Object {
            "required": true,
          },
        },
      },
      "singular": "post",
    },
  },
}
`;

exports[`preprocessSchema processes a shorthand relation 1`] = `
Object {
  "models": Object {
    "person": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "people",
      "relations": Object {
        "posts": Object {
          "fkName": "postIds",
          "inverseName": "person",
          "isInverse": true,
          "isPlural": true,
          "model": "post",
          "type": "string",
          "validations": Object {},
        },
      },
      "singular": "person",
    },
    "post": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
      },
      "plural": "posts",
      "relations": Object {
        "person": Object {
          "fkName": "personId",
          "inverseName": "posts",
          "isInverse": false,
          "isPlural": false,
          "model": "person",
          "type": "string",
          "validations": Object {},
        },
      },
      "singular": "post",
    },
  },
}
`;

exports[`preprocessSchema processes included fields 1`] = `
Object {
  "models": Object {
    "person": Object {
      "fields": Object {
        "id": Object {
          "type": "string",
        },
        "name": Object {
          "type": "string",
        },
      },
      "plural": "people",
      "relations": Object {},
      "singular": "person",
    },
  },
}
`;

exports[`preprocessSchema respects unknown schema attributes 1`] = `
Object {
  "models": Object {
    "person": Object {
      "fields": Object {
        "name": Object {
          "foo": 3,
          "type": "string",
        },
      },
      "foo": 3,
      "plural": "people",
      "relations": Object {},
      "singular": "person",
    },
  },
  "schemaFoo": 5,
}
`;
